# agentic-chatbot

./: Dockerfile  README.md  chatbot.py  docker-compose.yml  pyproject.toml  requirements.txt  run.py
config/: settings.py
src/core/: agent.py  graph.py
src/database/: manager.py  models.py
src/memory/: manager.py
src/rag/: manager.py
src/tools/: __init__.py  appointment.py  calculator.py  datetime_tool.py  weather.py
src/utils/: file_processor.py
src/web/: app.py
src/web/routes/: chat.py  files.py  memory.py
src/web/utils/: decorators.py
static/: stream-demo.html
templates/: index.html
