[project]
name = "agentic-chatbot"
version = "0.1.0"
description = "A standalone agentic chatbot app"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.1",
    "flask-cors>=6.0.0",
    "groq>=0.26.0",
    "httpx>=0.28.1",
    "langchain>=0.3.25",
    "langchain-community>=0.3.24",
    "langchain-deepseek>=0.1.3",
    "langchain-groq>=0.3.2",
    "langchain-huggingface>=0.2.0",
    "langgraph>=0.4.7",
    "mcp[cli]>=1.9.2",
    "pypdf2>=3.0.1",
    "scikit-learn>=1.6.1",
    "sentence-transformers>=4.1.0",
    "uvicorn[standard]>=0.29.0",
]

[tool.setuptools]
packages = ["agentic_chatbot"]
